# interval-tree

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.linux  configure.ac
src/: interval.c  interval.h  interval_list.c  interval_list.h  itree.c  itree.h  utils.h
tests/: interval.c  interval_list.c  interval_tree.c  test_tree.c  utils.c
